# isqx

./: .gitignore  404.html  CONTRIBUTING.md  Cargo.toml  README.md  index.html  justfile  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  vis.html
.github/workflows/: ci.yml  docs.yml  publish-pypi.yml  tests.yml
api/aerospace/: index.html
api/core/: index.html
api/details/: index.html
api/iso80000/: index.html
api/mkdocs/: index.html
api/usc/: index.html
assets/: KaTeX-DPjN7E1Y.js  index-B68EjHsD.css  index-D11zkfh9.js  objects.json
contributing/: index.html
crates/isq/: Cargo.toml
crates/isq/src/: exponent.rs  lib.rs  main.rs  prefix.rs  quantity.rs  unit.rs
crates/isq/src/quantity/: classical_mechanics.rs  mod.rs  space_and_time.rs
design/: index.html
docs/: .gitignore  api.md  design.md  vis.md
docs/api/: aerospace.md  core.md  details.md  iso80000.md  mkdocs.md  si.md  us_customary.md  usc.md
examples/: index.html
python/: Cargo.toml  README.md  pyproject.toml
python/src/: lib.rs
python/src/isq/: __init__.py
scripts/: cmap.py  docs.py  make.py  style-check.sh
scripts/wikidata/: README.md
search/: search_index.json
src/isq/: __init__.py  _citations.py  _core.py  _iso80000.py  aerospace.py  aviation.py  core.py  fmt.py  si.py  us_customary.py  usc.py
src/isq/details/: __init__.py  iso80000.py
src/isq/mkdocs/: extension.py  plugin.py
src/isq/mkdocs/assets/css/: detail-highlight.css
src/isq/mkdocs/assets/js/: detail-highlight.mjs
src/isq/mkdocs/templates/material/isq/: attribute.html.jinja  function.html.jinja  isq.jinja
src/isq_vis/: index.html  package.json
src/isq_vis/src/: App.module.scss  App.tsx  Graph.tsx  Panel.module.scss  Panel.tsx  graph.ts  types.d.ts  utils.ts
src/isqx/: _core.py  _iso80000.py  aerospace.py
src/isqx/details/: __init__.py
src/isqx/mkdocs/: README.md  extension.py  unit_json.py
src/isqx/mkdocs/templates/material/isqx/: isqx.jinja
src/isqx_vis/: .gitignore  package.json  pnpm-lock.yaml
src/isqx_vis/src/: App.module.scss  App.tsx  Graph.module.scss  Graph.tsx  JumpContext.ts  Panel.module.scss  Panel.tsx  Search.module.scss  Search.tsx  graph.ts  graphView.ts  index.tsx  search.ts  types.d.ts  utils.ts
tests/: test_basic.py  test_core.py  test_fmt.py  test_lazy_factor.py  test_lazy_product.py  test_mkdocs_extension.py
vis/: index.html
