[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "isq"
version = "0.1.0"
description = "A system for representing physical units"
readme = "README.md"
authors = [{ name = "Abraham Cheung", email = "abraham@ylcheung.com" }]
requires-python = ">=3.9"
dependencies = []

[dependency-groups]
dev = ["ipykernel>=6.29.5"]
lint = ["ruff>=0.11.12"]
test = [
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
]
typing = ["mypy>=1.16.0"]
docs = ["mkdocs-material[imaging]>=9.6.14", "mkdocstrings-python>=1.16.11"]

[tool.uv]
default-groups = "all"

[tool.ruff]
line-length = 80
target-version = "py39"

[tool.mypy]
python_version = "3.9"
platform = "posix"

color_output = true
pretty = true
show_column_numbers = true
strict = true
check_untyped_defs = true
ignore_missing_imports = true
warn_no_return = true
warn_return_any = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.coverage.report]
exclude_also = [
    # ellipsis in protocol
    "\\.\\.\\.",
]