[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "isq"
version = "0.1.0"
description = "Units and quantity kinds defined by ISO/IEC 80000."
readme = "README.md"
authors = [{ name = "Abraham Cheung", email = "abraham@ylcheung.com" }]
requires-python = ">=3.9"
dependencies = ["typing-extensions>=4.0.0; python_version<'3.10'"]

[dependency-groups]
dev = ["ipykernel>=6.29.5", "typer>=0.16.0"]
lint = ["ruff>=0.11.12"]
test = ["pytest>=8.3.5", "pytest-cov>=6.1.1"]
typing = ["mypy>=1.16.0"]
docs = [
    "mkdocs-material[imaging]>=9.6.14",
    "mkdocstrings-python>=1.16.11",
    "griffe>=1.8.0",
]
wikidata = ["httpx>=0.28.1", "polars>=1.31.0"]

[project.entry-points."mkdocs.plugins"]
isq = "isq.mkdocs.plugin:IsqPlugin"

[project.entry-points."mkdocstrings.python.templates"]
isq = "isq.mkdocs.extension:get_templates_path"

[tool.uv]
default-groups = "all"

[tool.ruff]
line-length = 80
target-version = "py39"

[tool.mypy]
python_version = "3.9"
platform = "posix"

color_output = true
pretty = true
show_column_numbers = true
strict = true
check_untyped_defs = true
ignore_missing_imports = true
warn_no_return = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.coverage.report]
exclude_also = [
    # ellipsis in protocol
    "\\.\\.\\.",
    "assert_never\\(.*\\)",
]
