[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "isq"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "cathaypacific8747", email = "abraham@ylcheung.com" }
]
requires-python = ">=3.9"
dependencies = []

[project.scripts]
isq = "isq:main"

[tool.maturin]
module-name = "isq._core"
python-packages = ["isq"]
python-source = "src"

[tool.ruff]
line-length = 80
target-version = "py310"

[tool.mypy]
python_version = "3.10"
platform = "posix"

color_output = true
pretty = true
show_column_numbers = true
strict = true
check_untyped_defs = true
ignore_missing_imports = true
warn_no_return = true
warn_return_any = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true